# LMCache

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  format.sh  pyproject.toml  requirements.txt  setup.py
.buildkite/: drawing_wrapper.py  end-to-end-test.sh  install-env-bm.sh  install-env-e2e.sh  install-env.sh  install-lmcache.sh  pipeline-docker.yml  pipeline.yml
.buildkite/correctness/: 1-mmlu.py  2-mmlu.py  README.md  create_report.py  deploy-1-vllm.sh  deploy-2-lmcache.sh  download-data.sh  env-setup.sh  pipeline.mmlu.yml  summarize_scores.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: actionlint.yml  build_doc.yml  code_quality_checks.yml  mypy.yaml  publish.yml  ruff.yml
benchmarks/multi-round-qa/: data_preprocessing.py  multi-round-qa.py  utils.py
benchmarks/rag/: precompute.py  rag.py  utils.py
csrc/: cuda_compat.h  mem_kernels.cu  mem_kernels.cuh  pos_kernels.cu  pybind.cpp
docker/: Dockerfile  Dockerfile.manylinux-cuda  example_build.sh  example_run.sh  requirements-build.txt  requirements-cuda.txt  requirements.txt
docker/patch/: factory.py  lmcache_connector.py
docs/: README.md
docs/source/: conf.py  index.rst
examples/blank_test/: lmcache_config.yaml  lmcache_config_fs.yaml  test.sh  workspace.code-workspace
examples/blend_kv/: batched_kv.py  batched_tp_kv.py  blend_kv.py  online_kv.py  tp_kv.py
examples/cache_controller/: README.md
examples/disagg_prefill/: README.md  disagg_example_nixl.sh
examples/docker/: offline_inference.py
examples/experimental/: offline_inference.py
examples/frontend/: chat_session.py  frontend.py
examples/kubernetes/: health_probe.py
examples/kv_cache_calculator/: generate_config.py  genrate_config.py  kv_cache_calculator.html  modelconfig.json
examples/lmc_connector/: offline_inference.py
examples/redis_lookup/: README.md
examples/sgl_integration/: README.md  lmcache_config.yaml
lmcache/: cache_engine.py  config.py  connections.py  observability.py  protocol.py  usage_context.py
lmcache/blend/: executor.py  interfaces.py  retriever.py
lmcache/experimental/: cache_engine.py  config.py  gpu_connector.py  memory_management.py  protocol.py
lmcache/server/: __main__.py
lmcache/storage_backend/: __init__.py  abstract_backend.py  hybrid_backend.py  local_backend.py  remote_backend.py
lmcache/v1/: cache_engine.py  cache_interface.py  config.py  gpu_connector.py  memory_management.py  protocol.py  token_database.py
requirements/: bench.txt  build.txt  common.txt  cuda.txt  docs.txt  lint.txt  test.txt
tests/: conftest.py  test_backends.py  test_blend.py  test_cache_engine.py  test_connector.py  test_evictor.py  test_mempool.py  test_observability.py  test_protocol.py  test_serde.py
tests/benchmarks/: decompress.py  prefetch.py  test_benchmark.py  transmit.py
tests/disagg/: README.md  test_nixl_cache_engine.py  test_nixl_channel.py  test_nixl_channel_v2.py  test_nixl_pipe.py  test_nixl_pipe_v2.py  test_nixl_storage_backend.py
(+143 files in other folders)
